# illia

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  mkdocs.yml  mypy.ini  noxfile.py  pre_commit.sh  pyproject.toml  requirements-dev.txt  requirements-wiki.txt  requirements.txt  setup.cfg  setup.py  test.ipynb  tests.ipynb  versions.json
.devcontainer/: README.md  devcontainer.json  setup.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/build-application/: action.yml
.github/actions/build-mkdocs/: action.yml
.github/actions/deployment/: action.yml
.github/actions/lint/: action.yml
.github/actions/lint-code/: action.yml
.github/actions/obtain-version/: action.yml
.github/actions/security/: action.yml
.github/actions/setup-python-env/: action.yml
.github/actions/test/: action.yml
.github/actions/test-code/: action.yml
.github/workflows/: test_workflow.yml  workflow.yml
docs/: .nav.yml  bayesian_neural_networks.md  index.md
docs/Deep_Learning_Frameworks/Jax_Reference/: nn.md
docs/Deep_Learning_Frameworks/PyTorch_Reference/: distributions.md
docs/Deep_Learning_Frameworks/Tensorflow_Reference/: distributions.md  nn.md
docs/Deep_Learning_Frameworks/examples/: distributions.ipynb
docs/assets/css/: custom.css
docs/deep_learning_frameworks/examples/: bayesian_base.ipynb  bayesian_nn_losses.ipynb
docs/deep_learning_frameworks/jax_reference/: distributions.md
docs/deep_learning_frameworks/tensorflow_reference/: distributions.md  neural_network.md
docs/deep_learning_frameworks/torch_reference/: distributions.md
docs/distributions/: distributions.md
docs/examples/: bayesian_base.ipynb  bayesian_nn_losses.ipynb  distributions.ipynb
docs/examples/Computer Vision/: MNIST Bayesian CNN.ipynb
docs/nn/: nn.md
docs/nn_geom/: nn_geom.md
docs/reference/: bayesian_neural_networks.md  bibliography.md
docs/tensorflow_reference/distributions/: distributions.md
docs/tensorflow_reference/neural_network/: nn.md
docs/tf/distributions/: distributions.md
docs/tf/nn/: nn.md
docs/torch/distributions/: distributions.md
docs/torch/nn/: nn.md
docs/torch/nn_geom/: nn_geom.md
docs/torch_reference/distributions/: distributions.md
docs/torch_reference/geometric/: nn_geom.md
docs/torch_reference/neural_network/: nn.md
examples/: illia_all_backend_all_modules_pytests.ipynb  jax.ipynb  trials.ipynb
illia/: __init__.py  backend.py  support.py  version.py
illia/distributions/: __init__.py  base.py  gaussian.py
illia/distributions/dynamic/: __init__.py  base.py  gaussian.py
illia/distributions/jax/: __init__.py  base.py  gaussian.py
illia/distributions/static/: __init__.py  base.py  gaussian.py
illia/distributions/tf/: __init__.py  base.py  gaussian.py
illia/distributions/torch/: __init__.py  base.py  gaussian.py
illia/jax/distributions/: __init__.py  base.py  gaussian.py
illia/jax/nn/: __init__.py  base.py  linear.py  utils.py
illia/losses/: __init__.py
illia/losses/jax/: __init__.py  elbo.py  kl.py
illia/losses/tf/: __init__.py  elbo.py  kl.py
illia/losses/torch/: __init__.py  elbo.py  kl.py
illia/nn/: __init__.py  base.py  conv.py  embedding.py  linear.py  losses.py
illia/nn/jax/: __init__.py  base.py  conv1d.py  conv2d.py  embedding.py  linear.py  lstm.py  utils.py
illia/nn/pyg/: __init__.py  cg_conv.py
illia/nn/tf/: __init__.py  base.py  conv1d.py  conv2d.py  embedding.py  linear.py  losses.py  lstm.py
illia/nn/torch/: __init__.py  base.py  conv.py  conv1d.py  conv2d.py  embedding.py  linear.py  losses.py  lstm.py
illia/nn_geom/: __init__.py
illia/nn_geom/conv/: __init__.py  cg_conv.py
illia/pyg/nn/: __init__.py
illia/pyg/nn/conv/: __init__.py  (+1 more)
illia/tf/distributions/: __init__.py  base.py  gaussian.py
illia/tf/nn/: __init__.py  base.py  conv.py  conv1d.py  conv2d.py  embedding.py  linear.py  losses.py
illia/torch/distributions/: __init__.py  base.py  gaussian.py
illia/torch/nn/: __init__.py  base.py  conv.py  conv1d.py  conv2d.py  embedding.py  linear.py  losses.py
illia/utils/: __init__.py  other.py
tests/: fixtures.py  fixtures_distributions.py  fixtures_nn.py  noxfile.py  test_conv.py  test_distributions.py  test_nn_base.py  test_prueba.py
tests/cross_framework/: __init__.py  fixtures_distributions.py  fixtures_nn.py  test_conv.py  test_distributions.py  test_nn_base.py
tests/cross_framework/utils/: __init__.py  logs.py  utils.py
tests/frameworks/: __init__.py
tests/jax/distributions/: conftest.py  test_gaussian.py
tests/jax/losses/: conftest.py  test_losses.py
tests/jax/nn/: conftest.py  test_conv1d.py  test_conv2d.py  test_embedding.py  test_linear.py  test_lstm.py
tests/tf/distributions/: test_gaussian.py
tests/tf/losses/: conftest.py  test_losses.py
tests/tf/nn/: _test_conv1d.py  _test_conv2d.py  conftest.py  test_conv.py  test_conv1d.py  test_conv2d.py  test_embedding.py  test_embeddings.py  test_linear.py  test_losses.py  test_lstm.py
tests/torch/distributions/: test_gaussian.py
tests/torch/losses/: conftest.py  test_losses.py
tests/torch/nn/: conftest.py  test_conv.py  test_conv1d.py  test_conv2d.py  test_embedding.py  test_linear.py  test_losses.py  test_lstm.py  utils.py
tests/utils/: __init__.py  logs.py  utils.py
tests2/: __init__.py  fixtures_nn.py
tests2/utils/: __init__.py  utils.py
v0.1.0/: 404.html  index.html  objects.inv
v0.1.0/examples/: bayesian_base.html  bayesian_nn_losses.html  distributions.html
v0.1.0/reference/: bayesian_neural_networks.html  bibliography.html
v0.1.0/search/: search_index.json
v0.2.1/: index.html  objects.inv
v0.2.1/search/: search_index.json
v0.2.2/: 404.html  index.html  objects.inv
v0.2.2/reference/: bayesian_neural_networks.html  bibliography.html
v0.2.2/search/: search_index.json
v0.2.3/reference/: bayesian_neural_networks.html
v0.2.3/search/: search_index.json
v0.2.4/: 404.html  index.html
v0.2.4/reference/: bibliography.html
v0.2.4/search/: search_index.json
(+106 files in other folders)
