[tool.poetry]
name = "illia"
version = "0.1.0"
license = "MIT"
description = "__THIS_IS_USED_FOR_DEVELOPMENT_ONLY__"
authors = ["Oscar Llorente <oscar.llorente.gonzalez@ericsson.com>"]
maintainers = [
    "Anubhab Samal <anubhab.samal@ericsson.com>",
    "Daniel Bazo <dani.bazo@ericsson.com>",
    "Lucia Ferrer <lucia.ferrer@ericsson.com>",
]
readme = "README.md"
package-mode = false
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "2.4.0"
tensorflow = "2.15.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
torch-geometric = "^2.6.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.10.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-order = "^1.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-material = "^9.5.43"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-git-authors-plugin = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
